--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -8,7 +9,7 @@
 </head>
 <body>
     <div class="caixa-principal">
-        <h1>desigualdade de oportunidades</h1>
+        <h1>Desigualdade de Oportunidades</h1>
         <div class="caixa-perguntas"></div>
         <div class="caixa-alternativas"></div>
         <div class="caixa-resultado"></div>
