--- a/index.html
+++ b/index.html
@@ -1,26 +1,18 @@
-
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title> SOCIAL</title>
+    <title>SOCIAL</title>
 </head>
 
 <body>
     <div class="caixa-principal">
-        <h1>Desigualdades de oportunidades</h1>
+        <h1>DESIGUALDADES DE OPORTUNIDADES</h1>
         <div class="tela-inicial">
-            <p>Novembro de 2022, a humanidade se viu em uma realidade perturbadora.
-                De repente, percebemos que as máquinas evoluíram para além do que imaginávamos.
-                Agora, elas escrevem e falam de um jeito tão parecido com humanos que é quase impossível diferenciar
-                quem foi que escreveu ou falou o que.
-                Em meio a esse caos de identidade, uma missão surgiu.
-                Nosso objetivo: explorar o impacto da Inteligência Artificial (IA) em nossas vidas e confrontar as
-                possibilidades que o futuro nos reserva.
-                O mundo nunca mais será o mesmo.
+            <p>A desigualdade de oportunidades ocorre quando o acesso a recursos e chances de sucesso varia conforme o status socioeconômico, gênero, etnia, ou local de nascimento de uma pessoa, perpetuando a exclusão social e dificultando a construção de uma sociedade justa. Combatê-la requer políticas que garantam acesso igualitário a educação, saúde e emprego para todos.
             </p>
             <button class="iniciar-btn">Iniciar</button>
         </div>
